Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Quảng Ngãi lần đầu tiên phát hiện sản xuất ma túy trái phép",
+    "content": "Công an tỉnh Quảng Ngãi đã phát hiện và khởi tố vụ sản xuất ma túy trái phép, đánh dấu sự kiện đầu tiên trong tỉnh. Bị can Nguyễn Hữu Quyết, 28 tuổi, bị bắt quả tang khi đang điều chế các chất lỏng nghi là ma túy tại một homestay. Công an đã thu giữ khoảng 7 lít ma túy thành phẩm và các dụng cụ liên quan đến sản xuất ma túy.",
+    "link": "https://tuoitre.vn/quang-ngai-lan-dau-tien-phat-hien-san-xuat-ma-tuy-trai-phep-20250325180637169.htm",
+    "cat": "phap-luat",
+    "positivity": 2,
+    "importance": 8,
+    "question": "Vụ sản xuất ma túy trái phép đầu tiên tại Quảng Ngãi được phát hiện như thế nào?",
+    "answers": [
+      {
+        "text": "Công an bắt quả tang Nguyễn Hữu Quyết tại homestay.",
+        "correct": true
+      },
+      {
+        "text": "Có một cuộc điều tra lớn của công an.",
+        "correct": false
+      },
+      {
+        "text": "Một người dân tố giác hành vi sản xuất ma túy.",
+        "correct": false
+      },
+      {
+        "text": "Nguyễn Hữu Quyết tự thú với công an.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Những thực phẩm lên men giúp tóc chắc khỏe",
     "content": "Thực phẩm lên men như sữa chua, kim chi và các sản phẩm từ đậu nành có tác dụng tốt cho sức khỏe tóc. Chúng cung cấp lợi khuẩn, vitamin B và chất chống oxy hóa, giúp nuôi dưỡng da đầu và thúc đẩy tóc mọc khỏe. Bác sĩ Hoàng Quyết Tiến cho biết, các lợi khuẩn này giúp cân bằng hệ vi sinh trên da đầu, ngăn ngừa gàu và viêm nhiễm, từ đó tạo điều kiện cho tóc phát triển tốt hơn. Tuy nhiên, cần sử dụng thực phẩm lên men một cách hợp lý để tránh ảnh hưởng xấu đến sức khỏe.",
     "link": "https://vnexpress.net/nhung-thuc-pham-len-men-giup-toc-chac-khoe-4865722.html",
@@ -931,33 +958,6 @@
     ]
   },
   {
-    "title": "VAS tiên phong chuyển đổi số, tích hợp AI vào giảng dạy cho học sinh",
-    "content": "Trường Quốc tế Việt Úc (VAS) đang tiên phong trong việc chuyển đổi số và tích hợp trí tuệ nhân tạo (AI) vào chương trình giảng dạy cho học sinh. Được tổ chức vào ngày 15/3, hội thảo \"Tối ưu cuộc sống với AI\" thu hút sự tham gia của hơn 200 phụ huynh và 1 triệu lượt xem trực tuyến. Từ năm học 2025-2026, học sinh VAS sẽ có một tiết học về AI mỗi tuần, nhằm trang bị kỹ năng cần thiết cho thế hệ công dân số. VAS cam kết không ngừng đổi mới và phát triển để giữ vững vị thế hàng đầu trong giáo dục quốc tế tại Việt Nam.",
-    "link": "https://dantri.com.vn/giao-duc/vas-tien-phong-chuyen-doi-so-tich-hop-ai-vao-giang-day-cho-hoc-sinh-20250325141325818.htm",
-    "cat": "giao-duc",
-    "positivity": 9,
-    "importance": 8,
-    "question": "VAS tích hợp AI vào chương trình giảng dạy như thế nào?",
-    "answers": [
-      {
-        "text": "Học sinh sẽ có một tiết học về AI mỗi tuần.",
-        "correct": true
-      },
-      {
-        "text": "Học sinh sẽ học về lịch sử AI.",
-        "correct": false
-      },
-      {
-        "text": "VAS không có chương trình dạy về AI.",
-        "correct": false
-      },
-      {
-        "text": "Học sinh chỉ học lý thuyết về AI.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bệnh lao phổi có thể chữa khỏi không?",
     "content": "Bệnh lao phổi có thể chữa khỏi hoàn toàn nếu được phát hiện sớm và điều trị theo đúng phác đồ. Tỷ lệ điều trị thành công đối với lao phổi nhạy cảm với thuốc lên đến khoảng 95%, trong khi lao kháng thuốc có tỷ lệ thành công từ 60-80%. Người bệnh cần tuân thủ nghiêm ngặt thời gian và liều lượng thuốc, đồng thời duy trì chế độ dinh dưỡng hợp lý để tăng cường sức đề kháng.",
     "link": "https://vnexpress.net/benh-lao-phoi-co-the-chua-khoi-khong-4865645.html",
@@ -980,6 +980,33 @@
       },
       {
         "text": "Có, nhưng chỉ với thuốc đặc trị.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "VAS tiên phong chuyển đổi số, tích hợp AI vào giảng dạy cho học sinh",
+    "content": "Trường Quốc tế Việt Úc (VAS) đang tiên phong trong việc chuyển đổi số và tích hợp trí tuệ nhân tạo (AI) vào chương trình giảng dạy cho học sinh. Được tổ chức vào ngày 15/3, hội thảo \"Tối ưu cuộc sống với AI\" thu hút sự tham gia của hơn 200 phụ huynh và 1 triệu lượt xem trực tuyến. Từ năm học 2025-2026, học sinh VAS sẽ có một tiết học về AI mỗi tuần, nhằm trang bị kỹ năng cần thiết cho thế hệ công dân số. VAS cam kết không ngừng đổi mới và phát triển để giữ vững vị thế hàng đầu trong giáo dục quốc tế tại Việt Nam.",
+    "link": "https://dantri.com.vn/giao-duc/vas-tien-phong-chuyen-doi-so-tich-hop-ai-vao-giang-day-cho-hoc-sinh-20250325141325818.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "VAS tích hợp AI vào chương trình giảng dạy như thế nào?",
+    "answers": [
+      {
+        "text": "Học sinh sẽ có một tiết học về AI mỗi tuần.",
+        "correct": true
+      },
+      {
+        "text": "Học sinh sẽ học về lịch sử AI.",
+        "correct": false
+      },
+      {
+        "text": "VAS không có chương trình dạy về AI.",
+        "correct": false
+      },
+      {
+        "text": "Học sinh chỉ học lý thuyết về AI.",
         "correct": false
       }
     ]
@@ -3226,33 +3253,6 @@
     ]
   },
   {
-    "title": "Dấu hiệu nhận biết nốt ruồi có nguy cơ ung thư",
-    "content": "Nốt ruồi có thể là dấu hiệu cảnh báo ung thư da, đặc biệt là u hắc tố ác tính. Những dấu hiệu cần lưu ý bao gồm sự bất đối xứng, bờ không đều, màu sắc bất thường và đường kính lớn hơn 6 mm. Nếu nốt ruồi biến đổi theo thời gian hoặc có triệu chứng như ngứa, đau, cần thăm khám bác sĩ ngay. Để phòng ngừa, nên tránh nắng gắt và kiểm tra da thường xuyên.",
-    "link": "https://vnexpress.net/dau-hieu-nhan-biet-not-ruoi-co-nguy-co-ung-thu-4865300.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 9,
-    "question": "Làm thế nào để nhận biết nốt ruồi có nguy cơ ung thư?",
-    "answers": [
-      {
-        "text": "Nốt ruồi bất đối xứng và có màu sắc khác nhau.",
-        "correct": true
-      },
-      {
-        "text": "Nốt ruồi có màu nâu đồng nhất.",
-        "correct": false
-      },
-      {
-        "text": "Nốt ruồi nhỏ hơn 6 mm và tròn đều.",
-        "correct": false
-      },
-      {
-        "text": "Nốt ruồi không thay đổi theo thời gian.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Sống - làm việc - giải trí đa thế hệ tại công viên xanh rộng lớn ở miền Trung",
     "content": "Công viên Eco Central Park ở miền Trung Việt Nam là khu đô thị lớn với diện tích gần 200ha, cung cấp không gian sống, làm việc và giải trí cho cư dân đa thế hệ. Dự án chú trọng vào việc phát triển không gian xanh và tiện ích đa dạng, bao gồm trường học, không gian làm việc chung và khu thể thao, nhằm tạo ra một môi trường sống lành mạnh và tiện nghi. Với nhiều cây xanh và mặt nước, Eco Central Park hứa hẹn trở thành trung tâm văn hóa, giải trí mới tại Nghệ An.",
     "link": "https://tuoitre.vn/song-lam-viec-giai-tri-da-the-he-tai-cong-vien-xanh-rong-lon-o-mien-trung-20250324160729873.htm",
@@ -3275,6 +3275,33 @@
       },
       {
         "text": "Là một khu đô thị nhỏ với ít tiện ích.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Dấu hiệu nhận biết nốt ruồi có nguy cơ ung thư",
+    "content": "Nốt ruồi có thể là dấu hiệu cảnh báo ung thư da, đặc biệt là u hắc tố ác tính. Những dấu hiệu cần lưu ý bao gồm sự bất đối xứng, bờ không đều, màu sắc bất thường và đường kính lớn hơn 6 mm. Nếu nốt ruồi biến đổi theo thời gian hoặc có triệu chứng như ngứa, đau, cần thăm khám bác sĩ ngay. Để phòng ngừa, nên tránh nắng gắt và kiểm tra da thường xuyên.",
+    "link": "https://vnexpress.net/dau-hieu-nhan-biet-not-ruoi-co-nguy-co-ung-thu-4865300.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 9,
+    "question": "Làm thế nào để nhận biết nốt ruồi có nguy cơ ung thư?",
+    "answers": [
+      {
+        "text": "Nốt ruồi bất đối xứng và có màu sắc khác nhau.",
+        "correct": true
+      },
+      {
+        "text": "Nốt ruồi có màu nâu đồng nhất.",
+        "correct": false
+      },
+      {
+        "text": "Nốt ruồi nhỏ hơn 6 mm và tròn đều.",
+        "correct": false
+      },
+      {
+        "text": "Nốt ruồi không thay đổi theo thời gian.",
         "correct": false
       }
     ]
@@ -3396,33 +3423,6 @@
     ]
   },
   {
-    "title": "Đề xuất tăng dần tiền lương đóng BHXH bắt buộc cho học viên quân đội, công an",
-    "content": "Bộ Quốc phòng vừa đề xuất điều chỉnh mức tiền lương đóng bảo hiểm xã hội (BHXH) cho học viên quân đội và công an. Theo dự thảo, trong hai năm đầu, mức lương đóng BHXH sẽ bằng hai lần mức tham chiếu, sau đó tăng dần 0,5 lần mỗi năm, tối đa đạt 4 lần mức tham chiếu. Đề xuất này nhằm khắc phục hạn chế trong quyền lợi hưu trí của các quân nhân và phù hợp với Luật BHXH sửa đổi.",
-    "link": "https://vnexpress.net/de-xuat-tang-dan-tien-luong-dong-bhxh-bat-buoc-cho-hoc-vien-quan-doi-cong-an-4865318.html",
-    "cat": "phap-luat",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Đề xuất mới của Bộ Quốc phòng về mức đóng BHXH bắt buộc cho học viên quân đội có gì thay đổi?",
-    "answers": [
-      {
-        "text": "Mức đóng BHXH sẽ tăng dần từ 2 lần mức tham chiếu trong hai năm đầu.",
-        "correct": true
-      },
-      {
-        "text": "Mức đóng BHXH sẽ được giữ nguyên như hiện tại.",
-        "correct": false
-      },
-      {
-        "text": "Mức đóng BHXH sẽ giảm xuống còn 1 lần mức tham chiếu.",
-        "correct": false
-      },
-      {
-        "text": "Mức đóng BHXH sẽ không thay đổi trong 5 năm tới.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Cha là người Pháp, mẹ là người Việt, con có được song tịch không?",
     "content": "Con gái của bạn, sinh ra và lớn lên ở Pháp với cha là người Pháp và mẹ là người Việt, có khả năng xin nhập quốc tịch Việt Nam mà không cần thôi quốc tịch Pháp. Theo Điều 19 Luật Quốc tịch Việt Nam, nếu người xin nhập quốc tịch là con đẻ của công dân Việt Nam, họ có thể được phép nhập quốc tịch Việt Nam mà không phải đáp ứng một số điều kiện. Hồ sơ cần chuẩn bị bao gồm đơn xin nhập quốc tịch, giấy khai sinh và lý lịch tư pháp.",
     "link": "https://tuoitre.vn/cha-la-nguoi-phap-me-la-nguoi-viet-con-co-duoc-song-tich-khong-20250306121602648.htm",
@@ -3445,6 +3445,33 @@
       },
       {
         "text": "Không, cháu không đủ điều kiện để xin quốc tịch Việt Nam.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đề xuất tăng dần tiền lương đóng BHXH bắt buộc cho học viên quân đội, công an",
+    "content": "Bộ Quốc phòng vừa đề xuất điều chỉnh mức tiền lương đóng bảo hiểm xã hội (BHXH) cho học viên quân đội và công an. Theo dự thảo, trong hai năm đầu, mức lương đóng BHXH sẽ bằng hai lần mức tham chiếu, sau đó tăng dần 0,5 lần mỗi năm, tối đa đạt 4 lần mức tham chiếu. Đề xuất này nhằm khắc phục hạn chế trong quyền lợi hưu trí của các quân nhân và phù hợp với Luật BHXH sửa đổi.",
+    "link": "https://vnexpress.net/de-xuat-tang-dan-tien-luong-dong-bhxh-bat-buoc-cho-hoc-vien-quan-doi-cong-an-4865318.html",
+    "cat": "phap-luat",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Đề xuất mới của Bộ Quốc phòng về mức đóng BHXH bắt buộc cho học viên quân đội có gì thay đổi?",
+    "answers": [
+      {
+        "text": "Mức đóng BHXH sẽ tăng dần từ 2 lần mức tham chiếu trong hai năm đầu.",
+        "correct": true
+      },
+      {
+        "text": "Mức đóng BHXH sẽ được giữ nguyên như hiện tại.",
+        "correct": false
+      },
+      {
+        "text": "Mức đóng BHXH sẽ giảm xuống còn 1 lần mức tham chiếu.",
+        "correct": false
+      },
+      {
+        "text": "Mức đóng BHXH sẽ không thay đổi trong 5 năm tới.",
         "correct": false
       }
     ]
@@ -4478,33 +4505,6 @@
     ]
   },
   {
-    "title": "Màu ráy tai thế nào là bình thường?",
-    "content": "Ráy tai là một chất tự nhiên được sản xuất từ tế bào chết, mồ hôi và bụi bẩn trong ống tai. Màu sắc của ráy tai bình thường thường là vàng và hơi dính, không có mùi. Nếu ráy tai có màu sắc khác như xanh hoặc có mùi hôi, đó có thể là dấu hiệu của viêm nhiễm. Để duy trì sức khỏe tai, không cần phải lấy ráy tai hàng ngày, và nếu có vấn đề như ngứa hay đau, nên đến bác sĩ để kiểm tra.",
-    "link": "https://vnexpress.net/mau-ray-tai-the-nao-la-binh-thuong-4865292.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Màu ráy tai bình thường là gì?",
-    "answers": [
-      {
-        "text": "Vàng và hơi dính",
-        "correct": true
-      },
-      {
-        "text": "Trắng và khô",
-        "correct": false
-      },
-      {
-        "text": "Đen và có mùi",
-        "correct": false
-      },
-      {
-        "text": "Đỏ và lỏng",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Thiếu vi chất - thách thức lớn nhất với trẻ em Việt",
     "content": "Trẻ em Việt Nam đang phải đối mặt với thách thức lớn nhất về dinh dưỡng là thiếu vi chất dinh dưỡng, theo báo cáo từ bà Supasita Kraisri, Giám đốc tiếp thị FrieslandCampina Việt Nam. Khảo sát SEANUTS II cho thấy tỷ lệ trẻ thiếu vi chất dinh dưỡng, đặc biệt là sắt và kẽm, đang ở mức cao, với nhiều trẻ không đáp ứng được nhu cầu dinh dưỡng hàng ngày. Thiếu vi chất có thể dẫn đến những ảnh hưởng nghiêm trọng đến sự phát triển thể chất và trí tuệ của trẻ, do vậy việc chăm sóc dinh dưỡng cho trẻ em là rất cần thiết.",
     "link": "https://vnexpress.net/thieu-vi-chat-thach-thuc-lon-nhat-voi-tre-em-viet-4865346.html",
@@ -4558,6 +4558,33 @@
       },
       {
         "text": "Louis Vuitton và Versace",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Màu ráy tai thế nào là bình thường?",
+    "content": "Ráy tai là một chất tự nhiên được sản xuất từ tế bào chết, mồ hôi và bụi bẩn trong ống tai. Màu sắc của ráy tai bình thường thường là vàng và hơi dính, không có mùi. Nếu ráy tai có màu sắc khác như xanh hoặc có mùi hôi, đó có thể là dấu hiệu của viêm nhiễm. Để duy trì sức khỏe tai, không cần phải lấy ráy tai hàng ngày, và nếu có vấn đề như ngứa hay đau, nên đến bác sĩ để kiểm tra.",
+    "link": "https://vnexpress.net/mau-ray-tai-the-nao-la-binh-thuong-4865292.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Màu ráy tai bình thường là gì?",
+    "answers": [
+      {
+        "text": "Vàng và hơi dính",
+        "correct": true
+      },
+      {
+        "text": "Trắng và khô",
+        "correct": false
+      },
+      {
+        "text": "Đen và có mùi",
+        "correct": false
+      },
+      {
+        "text": "Đỏ và lỏng",
         "correct": false
       }
     ]
@@ -4733,33 +4760,6 @@
     ]
   },
   {
-    "title": "Dấu ấn 30 năm Toyota có mặt Việt Nam",
-    "content": "Toyota Việt Nam đã đánh dấu 30 năm hoạt động với việc xuất xưởng chiếc xe thứ 700.000 và tổ chức các hoạt động an toàn giao thông cho cộng đồng. Trong 30 năm qua, hãng đã có nhiều đóng góp cho kinh tế - xã hội, đồng thời nâng cao ý thức giao thông cho thế hệ trẻ thông qua các chương trình giáo dục. Các mẫu xe mới của Toyota được cải tiến với công nghệ an toàn tiên tiến, hướng tới việc giảm thiểu rủi ro giao thông cho người dùng. Hãng cũng đã đầu tư hơn 31 triệu USD vào các hoạt động trách nhiệm xã hội tại Việt Nam.",
-    "link": "https://vnexpress.net/dau-an-30-nam-toyota-co-mat-viet-nam-4865138.html",
-    "cat": "kinh-doanh",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Toyota đã có những đóng góp gì trong 30 năm hoạt động tại Việt Nam?",
-    "answers": [
-      {
-        "text": "Xuất xưởng xe thứ 700.000 và tổ chức các hoạt động an toàn giao thông.",
-        "correct": true
-      },
-      {
-        "text": "Mở rộng thị trường sang các nước khác.",
-        "correct": false
-      },
-      {
-        "text": "Giảm giá xe cho khách hàng.",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường quảng cáo sản phẩm mới.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Thai phụ uống cacao được không?",
     "content": "Phụ nữ mang thai có thể uống cacao với liều lượng vừa phải. Cacao mang lại nhiều lợi ích như ổn định tâm trạng, tăng cường miễn dịch và tốt cho hệ tiêu hóa. Chất theobromine trong cacao còn giúp giảm nguy cơ tiền sản giật và các biến chứng cho thai nhi. Tuy nhiên, thai phụ cần chú ý không tiêu thụ quá 200 mg caffeine mỗi ngày để tránh nguy cơ sảy thai.",
     "link": "https://vnexpress.net/thai-phu-uong-cacao-duoc-khong-4865277.html",
@@ -4782,6 +4782,33 @@
       },
       {
         "text": "Cacao có thể gây hại cho thai nhi.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Dấu ấn 30 năm Toyota có mặt Việt Nam",
+    "content": "Toyota Việt Nam đã đánh dấu 30 năm hoạt động với việc xuất xưởng chiếc xe thứ 700.000 và tổ chức các hoạt động an toàn giao thông cho cộng đồng. Trong 30 năm qua, hãng đã có nhiều đóng góp cho kinh tế - xã hội, đồng thời nâng cao ý thức giao thông cho thế hệ trẻ thông qua các chương trình giáo dục. Các mẫu xe mới của Toyota được cải tiến với công nghệ an toàn tiên tiến, hướng tới việc giảm thiểu rủi ro giao thông cho người dùng. Hãng cũng đã đầu tư hơn 31 triệu USD vào các hoạt động trách nhiệm xã hội tại Việt Nam.",
+    "link": "https://vnexpress.net/dau-an-30-nam-toyota-co-mat-viet-nam-4865138.html",
+    "cat": "kinh-doanh",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Toyota đã có những đóng góp gì trong 30 năm hoạt động tại Việt Nam?",
+    "answers": [
+      {
+        "text": "Xuất xưởng xe thứ 700.000 và tổ chức các hoạt động an toàn giao thông.",
+        "correct": true
+      },
+      {
+        "text": "Mở rộng thị trường sang các nước khác.",
+        "correct": false
+      },
+      {
+        "text": "Giảm giá xe cho khách hàng.",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường quảng cáo sản phẩm mới.",
         "correct": false
       }
     ]
