Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -108,6 +108,37 @@
     ]
   },
   {
+    "title": "Cường kích Su-25 Nga rơi khi huấn luyện",
+    "content": "Vào ngày 24/3, một chiếc máy bay cường kích Su-25 của Nga đã bị rơi trong khi thực hiện chuyến bay huấn luyện tại vùng Primorsky. Phi công đã kịp thời thoát hiểm và được cứu sống, không có thiệt hại nào trên mặt đất. Nguyên nhân ban đầu được xác định do trục trặc kỹ thuật, và một ủy ban điều tra đã được cử đến hiện trường.",
+    "link": "https://dantri.com.vn/the-gioi/cuong-kich-su-25-nga-roi-khi-huan-luyen-20250325164907444.htm",
+    "cat": "the-gioi",
+    "positivity": 7,
+    "importance": 6,
+    "question": "Vụ rơi máy bay Su-25 của Nga xảy ra ở đâu?",
+    "answers": [
+      {
+        "text": "Vùng Primorsky",
+        "correct": true
+      },
+      {
+        "text": "Vùng Siberia",
+        "correct": false
+      },
+      {
+        "text": "Vùng Moscow",
+        "correct": false
+      },
+      {
+        "text": "Vùng Vladivostok",
+        "correct": false
+      },
+      {
+        "text": "Vùng Tatarstan",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Những thực phẩm lên men giúp tóc chắc khỏe",
     "content": "Thực phẩm lên men như sữa chua, kim chi và các sản phẩm từ đậu nành có tác dụng tốt cho sức khỏe tóc. Chúng cung cấp lợi khuẩn, vitamin B và chất chống oxy hóa, giúp nuôi dưỡng da đầu và thúc đẩy tóc mọc khỏe. Bác sĩ Hoàng Quyết Tiến cho biết, các lợi khuẩn này giúp cân bằng hệ vi sinh trên da đầu, ngăn ngừa gàu và viêm nhiễm, từ đó tạo điều kiện cho tóc phát triển tốt hơn. Tuy nhiên, cần sử dụng thực phẩm lên men một cách hợp lý để tránh ảnh hưởng xấu đến sức khỏe.",
     "link": "https://vnexpress.net/nhung-thuc-pham-len-men-giup-toc-chac-khoe-4865722.html",
@@ -2175,33 +2206,6 @@
     ]
   },
   {
-    "title": "Hai tháng nỗ lực cứu người nhiễm trùng nặng van tim",
-    "content": "Trong suốt hai tháng, anh Thọ, 46 tuổi, đã trải qua cuộc chiến với viêm nội tâm mạc nhiễm trùng nặng do khối sùi trên van hai lá. Bệnh nhân đã từ chối phẫu thuật trong 12 năm qua và chỉ uống thuốc khi có triệu chứng. Khi viêm nhiễm tiến triển, anh đã được phẫu thuật thay van hai lá nhân tạo và sau đó theo dõi điều trị. Hiện tại, tình trạng sức khỏe của anh đã ổn định, không còn triệu chứng và đã xuất viện.",
-    "link": "https://vnexpress.net/hai-thang-no-luc-cuu-nguoi-nhiem-trung-nang-van-tim-4864905.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Anh Thọ đã trải qua điều trị gì để phục hồi sức khỏe?",
-    "answers": [
-      {
-        "text": "Phẫu thuật thay van hai lá nhân tạo",
-        "correct": true
-      },
-      {
-        "text": "Chỉ uống thuốc kháng sinh",
-        "correct": false
-      },
-      {
-        "text": "Điều trị bằng thuốc đông y",
-        "correct": false
-      },
-      {
-        "text": "Không cần điều trị gì cả",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bé sơ sinh tắc ruột",
     "content": "Bé Minh, một trong hai bé song sinh, bị tắc ruột do dị ứng sữa công thức và phải nhập viện cấp cứu. Sau khi được điều trị, bác sĩ đã thực hiện phẫu thuật mở hậu môn tạm và sau một tháng, bé được phẫu thuật đóng lại. Tắc ruột ở trẻ sơ sinh là tình trạng cần được cấp cứu kịp thời, thường do lồng ruột hoặc các vấn đề khác về tiêu hóa. Các bác sĩ khuyến cáo nên cho trẻ bú sữa mẹ hoàn toàn trong 6 tháng đầu đời để giảm nguy cơ tắc ruột.",
     "link": "https://vnexpress.net/be-so-sinh-tac-ruot-4865383.html",
@@ -2228,6 +2232,33 @@
       },
       {
         "text": "Tiêu chảy cấp",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hai tháng nỗ lực cứu người nhiễm trùng nặng van tim",
+    "content": "Trong suốt hai tháng, anh Thọ, 46 tuổi, đã trải qua cuộc chiến với viêm nội tâm mạc nhiễm trùng nặng do khối sùi trên van hai lá. Bệnh nhân đã từ chối phẫu thuật trong 12 năm qua và chỉ uống thuốc khi có triệu chứng. Khi viêm nhiễm tiến triển, anh đã được phẫu thuật thay van hai lá nhân tạo và sau đó theo dõi điều trị. Hiện tại, tình trạng sức khỏe của anh đã ổn định, không còn triệu chứng và đã xuất viện.",
+    "link": "https://vnexpress.net/hai-thang-no-luc-cuu-nguoi-nhiem-trung-nang-van-tim-4864905.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Anh Thọ đã trải qua điều trị gì để phục hồi sức khỏe?",
+    "answers": [
+      {
+        "text": "Phẫu thuật thay van hai lá nhân tạo",
+        "correct": true
+      },
+      {
+        "text": "Chỉ uống thuốc kháng sinh",
+        "correct": false
+      },
+      {
+        "text": "Điều trị bằng thuốc đông y",
+        "correct": false
+      },
+      {
+        "text": "Không cần điều trị gì cả",
         "correct": false
       }
     ]
@@ -2986,33 +3017,6 @@
     ]
   },
   {
-    "title": "Siêu mẫu Minh Tú sau kết hôn: Thay đổi \"180 độ\", chồng Tây cưng chiều",
-    "content": "Siêu mẫu Minh Tú đã có nhiều thay đổi tích cực trong cuộc sống sau khi kết hôn với chồng Tây, Christopher. Cô chia sẻ rằng sau khi về chung một nhà, tính cách của mình đã trở nên mềm mỏng và nữ tính hơn, thường xuyên vào bếp nấu ăn và chăm sóc tổ ấm. Minh Tú cũng cho biết chồng là nguồn động viên lớn, giúp cô vượt qua giai đoạn khó khăn trong cuộc sống. Hai người thường xuyên dành thời gian cho nhau, đi du lịch và thể hiện tình cảm ngọt ngào qua những hành động nhỏ.",
-    "link": "https://dantri.com.vn/giai-tri/sieu-mau-minh-tu-sau-ket-hon-thay-doi-180-do-chong-tay-cung-chieu-20250324145813189.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Minh Tú đã thay đổi như thế nào sau khi kết hôn?",
-    "answers": [
-      {
-        "text": "Cô trở nên nữ tính và chăm sóc gia đình hơn.",
-        "correct": true
-      },
-      {
-        "text": "Cô vẫn giữ nguyên tính cách mạnh mẽ như trước.",
-        "correct": false
-      },
-      {
-        "text": "Cô không còn tham gia vào các hoạt động xã hội.",
-        "correct": false
-      },
-      {
-        "text": "Cô trở nên ít nổi tiếng hơn.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Mỹ phát triển SUV bọc thép mới bảo vệ Tổng thống",
     "content": "Giám đốc Cơ quan Mật vụ Mỹ vừa có cuộc gặp với lãnh đạo General Motors để thảo luận về việc phát triển SUV bọc thép mới nhằm bảo vệ Tổng thống. Cuộc họp diễn ra trong bối cảnh GM đang chế tạo phiên bản mới của chiếc limousine dành cho Tổng thống có biệt danh \"The Beast\". Hợp đồng trị giá 14,8 triệu USD đã được ký kết với GM để tiến hành dự án này, nhưng thời gian ra mắt xe mới vẫn chưa được xác định.",
     "link": "https://vnexpress.net/my-phat-trien-suv-boc-thep-moi-bao-ve-tong-thong-4865414.html",
@@ -3039,6 +3043,33 @@
       },
       {
         "text": "Xe điện",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Siêu mẫu Minh Tú sau kết hôn: Thay đổi \"180 độ\", chồng Tây cưng chiều",
+    "content": "Siêu mẫu Minh Tú đã có nhiều thay đổi tích cực trong cuộc sống sau khi kết hôn với chồng Tây, Christopher. Cô chia sẻ rằng sau khi về chung một nhà, tính cách của mình đã trở nên mềm mỏng và nữ tính hơn, thường xuyên vào bếp nấu ăn và chăm sóc tổ ấm. Minh Tú cũng cho biết chồng là nguồn động viên lớn, giúp cô vượt qua giai đoạn khó khăn trong cuộc sống. Hai người thường xuyên dành thời gian cho nhau, đi du lịch và thể hiện tình cảm ngọt ngào qua những hành động nhỏ.",
+    "link": "https://dantri.com.vn/giai-tri/sieu-mau-minh-tu-sau-ket-hon-thay-doi-180-do-chong-tay-cung-chieu-20250324145813189.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Minh Tú đã thay đổi như thế nào sau khi kết hôn?",
+    "answers": [
+      {
+        "text": "Cô trở nên nữ tính và chăm sóc gia đình hơn.",
+        "correct": true
+      },
+      {
+        "text": "Cô vẫn giữ nguyên tính cách mạnh mẽ như trước.",
+        "correct": false
+      },
+      {
+        "text": "Cô không còn tham gia vào các hoạt động xã hội.",
+        "correct": false
+      },
+      {
+        "text": "Cô trở nên ít nổi tiếng hơn.",
         "correct": false
       }
     ]
