Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -529,6 +529,37 @@
     ]
   },
   {
+    "title": "'Cần chính sách giúp cán bộ tinh giản chuyển sang khu vực tư'",
+    "content": "Phó chủ tịch Quốc hội Nguyễn Thị Thanh đề nghị Chính phủ nghiên cứu chính sách hỗ trợ cán bộ, công chức bị ảnh hưởng bởi việc tinh giản bộ máy chuyển sang làm việc tại khu vực tư nhân. Bà nhấn mạnh rằng dự án Luật Việc làm sửa đổi chưa đưa ra chính sách phù hợp cho hơn 100.000 người bị ảnh hưởng và kêu gọi cần có hỗ trợ đào tạo lại nghề cho nhóm này. Đồng thời, bà cũng nhấn mạnh tầm quan trọng của việc phát triển kỹ năng nghề và bố trí việc làm cho những người rời khu vực công.",
+    "link": "https://vnexpress.net/can-chinh-sach-giup-can-bo-tinh-gian-chuyen-sang-khu-vuc-tu-4865805.html",
+    "cat": "thoi-su",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Chính phủ cần có chính sách gì cho cán bộ tinh giản chuyển sang khu vực tư?",
+    "answers": [
+      {
+        "text": "Hỗ trợ đào tạo nghề và chuyển sang khu vực tư",
+        "correct": true
+      },
+      {
+        "text": "Tăng lương cho cán bộ công chức",
+        "correct": false
+      },
+      {
+        "text": "Giảm thời gian làm việc",
+        "correct": false
+      },
+      {
+        "text": "Chỉ định lại vị trí công việc",
+        "correct": false
+      },
+      {
+        "text": "Tặng thưởng cho cán bộ nghỉ việc",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Mặt trận Kursk nóng rực, Nga kêu gọi lính Ukraine đầu hàng",
     "content": "Tại mặt trận Kursk, lực lượng Nga đã đẩy lùi các đơn vị Ukraine gần cửa khẩu Sudzha và kêu gọi lính Ukraine đầu hàng để bảo toàn tính mạng. Trong bối cảnh căng thẳng gia tăng, quân đội Ukraine đang điều động lực lượng từ các khu vực khác để củng cố phòng thủ và chuẩn bị cho các hoạt động tấn công mới. Ngoài ra, Nga cũng đang tìm cách thiết lập vùng đệm ở tỉnh Sumy để ngăn chặn các cuộc tấn công vào lãnh thổ của mình.",
     "link": "https://dantri.com.vn/the-gioi/mat-tran-kursk-nong-ruc-nga-keu-goi-linh-ukraine-dau-hang-20250325170935011.htm",
